fix alignment of twitter and facebook sharing buttons

--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ body.post-single .social-sharing a img {
 }
 
 div.fb-share-button.fb_iframe_widget iframe {
-	margin-top: -5px;
+	margin-top: -8px;
 }
 
 /*** page-not-found Page ***/
